--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,27 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext.hilt_version = '2.38.1'
+
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.1.2' apply false
-    id 'com.android.library' version '7.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    appcompat_version = '1.4.2'
+    constraint_layout_version = '2.1.4'
+    core_ktx_version = '1.8.0'
+    lifecycle_version = '2.5.0'
+    material_version = '1.6.1'
+    navigation_version = '2.5.0'
+    room_version = '2.4.2'
 }
